# z-notes

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/desktop/: .gitignore  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: App.tsx  package.json  vitest.config.ts
apps/mobile/src/api/: http.test.ts  http.ts  resources.test.ts  resources.ts
apps/mobile/src/hooks/: useFolders.test.ts  useFolders.ts  useNotes.test.ts  useNotes.ts  useUpdateNote.test.ts  useUpdateNote.ts
apps/mobile/src/lib/: queryClient.test.ts  queryClient.ts  storage.test.ts  storage.ts
apps/mobile/src/screens/: LoginScreen.test.tsx  LoginScreen.tsx  NoteDetailScreen.markdown.test.tsx  NoteDetailScreen.test.tsx  NoteDetailScreen.tsx  NoteListScreen.test.tsx  NoteListScreen.tsx
apps/mobile/src/test/: async-storage-mock.ts  expo-secure-store-mock.ts  expo-status-bar-mock.ts  react-native-markdown-display-mock.tsx  react-native-mock.tsx
apps/server/: package.json  tsconfig.json  vitest.config.ts
apps/server/scripts/: hash.ts  restore.ts
apps/server/src/: app.ts  config.ts  context.ts  errors.ts  index.ts  test-helpers.ts  validation.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/superpowers/specs/: 2026-07-06-backup-recorrente-design.md  2026-07-06-z-notes-design.md  2026-07-07-multi-usuario-google-design.md
(+76 files in other folders)
