[package]
name = "z-notes"
version = "0.1.0"
description = "Z Notes - Personal Note Taking App"
authors = ["guiliznas"]
edition = "2021"

[lib]
name = "z_notes_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
